[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullets/Bullet2.gd" type="Script" id=1]
[ext_resource path="res://Assests/bullet2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Bullet2" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, -22.6, 8, -19.4, 11, -12.6, 11, 23, -11, 23, -11, -6.1, -5, -22.4, -5, -23, 6.2, -23 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
